test/errors/offsets_error/zs/arithmetic_add_operator_error.zs
package arithmetic_add_operator_error;

struct ArithmeticAddOperatorError
{
    uint32 offset;
offset + offset:
    string field;
};
